--- a/friends/templates/home.html
+++ b/friends/templates/home.html
@@ -24,5 +24,5 @@
     </ul>
 
     <h1>Тут будут в будущем последние посты с пагинацией</h1>
-    <img src="{% static 'notes/images/hello.gif' %}" height="300">
+    <img src="{% static '/images/hello.gif' %}" height="300">
 {% endblock %}
