dev 2 added posts, admin, views,forms and so on except edit function

--- a/friends/templates/header.html
+++ b/friends/templates/header.html
@@ -16,7 +16,7 @@
           <a class="nav-link active" aria-current="page" href="#">Профиль</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Посты</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'posts:all_posts' %}">Посты</a>
         </li>
       </ul>
     </div>
