--- a/friends/templates/base.html
+++ b/friends/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block title %}<title>PyFriends</title>{% endblock  %}
+    <title>{% block title %}PyFriends{% endblock  %}</title>
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -14,7 +14,7 @@
     <header>
         {% include "header.html" %}
     </header>
-    <div class="container mt-5" style="padding-bottom: 50px;">
+    <div class="container mt-5" style="padding-bottom: 100px;">
         {% block content %}
             Some content
         {% endblock %}
