--- a/friends/templates/post_detail.html
+++ b/friends/templates/post_detail.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 
-    <h1>Post Detail</h1>
-    <h2>{{ post.title }}</h2>
+    <h2>Post Detail</h1>
+    <hr>
+    <h3>Topic: {{ post.title }}</h2>
+    <p>{{ post.text }}</p>
     <p>Author: {{ post.author }}</p>
     <p>Created at: {{ post.created_at }}</p>
     <a href="{% url 'posts:post_delete' post.id %}">Delete post</a>
