--- a/friends/templates/post_detail.html
+++ b/friends/templates/post_detail.html
@@ -7,6 +7,8 @@
     <p>Author: {{ post.author }}</p>
     <p>Created at: {{ post.created_at }}</p>
     <a href="{% url 'posts:post_delete' post.id %}">Delete post</a>
+    <a href="{% url 'posts:post_edit' post.id %}">Edit</a>
+
 
 
 {% endblock %}
