--- a/friends/profiles/templates/profiles/profile.html
+++ b/friends/profiles/templates/profiles/profile.html
@@ -12,4 +12,25 @@
   {% if profile.birth_date %}
     <p><strong>Дата рождения:</strong> {{ profile.birth_date }}</p>
   {% endif %}
+
+  <h2>Посты пользователя {{ profile.user.username }}</h2>
+
+  {% if posts %}
+      <ul>
+          {% for post in posts %}
+              <li>
+                  <strong>{{ post.title }}</strong><br>
+                  {{ post.text|truncatechars:100 }}<br>
+                  <em>{{ post.created_at|date:"d.m.Y H:i" }}</em>
+              </li>
+          {% endfor %}
+      </ul>
+  {% else %}
+      <p>У пользователя пока нет постов.</p>
+  {% endif %}
+
+  {% if is_own_profile %}
+    <p><a href="{% url 'profiles:edit_profile' %}">Редактировать профиль</a></p>
+  {% endif %}
+
 {% endblock %}
