--- a/friends/templates/header.html
+++ b/friends/templates/header.html
@@ -8,9 +8,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {% if user.is_authenticated %}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Профиль</a>
         </li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="{% url 'posts:all_posts' %}">Посты</a>
 
