Add of CHANGELOG.md and Profile button on main page

--- a/friends/templates/profile_view.html
+++ b/friends/templates/profile_view.html
@@ -30,7 +30,7 @@
   {% endif %}
 
   {% if is_own_profile %}
-    <p><a href="{% url 'profiles:edit_profile' %}">Редактировать профиль</a></p>
+    <p><a href="{% url 'profiles:profile_edit' %}">Редактировать профиль</a></p>
   {% endif %}
 
 {% endblock %}
