Tests, Posts statistic added and changed logic of profile_edit

--- a/friends/templates/profile_view.html
+++ b/friends/templates/profile_view.html
@@ -15,6 +15,8 @@
 
   <h2>Посты пользователя {{ profile.user.username }}</h2>
 
+  <p><strong>Всего постов:</strong> {{ posts|length }}</p>
+
   {% if posts %}
       <ul>
           {% for post in posts %}
@@ -30,7 +32,7 @@
   {% endif %}
 
   {% if is_own_profile %}
-    <p><a href="{% url 'profiles:profile_edit' %}">Редактировать профиль</a></p>
+    <p><a href="{% url 'profiles:profile_edit' username=profile.user.username %}">Редактировать профиль</a></p>
   {% endif %}
 
 {% endblock %}
